Autoresize the sign-in email confirmation dialog.

This CL uses an auto-resizeble WebUI constrained dialog to ensure that
it is loaded with the right height.

Screenshots:
https://drive.google.com/a/chromium.org/file/d/0Bw1MJ8m7U5kbTkVxc0twaDJhWjQ/view?usp=sharing
https://drive.google.com/a/chromium.org/file/d/0Bw1MJ8m7U5kbZmVFVXY1TnZmalU/view?usp=sharing

BUG=670238

Review-Url: https://codereview.chromium.org/2580663003
Cr-Commit-Position: refs/heads/master@{#438853}